@@ -270,8 +270,17 @@
 
     <p>This disables <a
     href="mod/core.html#keepalive">KeepAlive</a> when set.</p>
-    <hr />
 
+    <h2>redirect-carefully</h2>
+
+    <p>This forces the server to be more careful when sending a redirect
+    to the client.  This is typically used when a client has a known
+    problem handling redirects.  This was originally implemented as a
+    result of a problem with Microsoft's WebFolders software which has
+    a problem handling redirects on directory resources via DAV 
+    methods.</p>
+
+    <hr />
     <h2><a id="examples" name="examples">Examples</a></h2>
 
     <h3>Changing protocol behavior with misbehaving clients</h3>
